--- a/src/components/Calculate/Calculate.css
+++ b/src/components/Calculate/Calculate.css
@@ -1,11 +1,11 @@
-.calculator {
+.calculate {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-content: center;
-  width: 400px;
-  margin: 0 auto;
+  width: 600px;
   row-gap: 5px;
+  height: auto;
+  margin-top: 20px;
 }
 
 .calculator-display {
